ingressrules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
spec:
  ingressClassName: nginx
  rules:
  - host: "world.universe.region"
    http:
      paths:
      - pathType: Prefix
        path: "/america"
        backend:
          service:
            name: america
            port:
              number: 80
  - host: "world.universe.mine"
    http:
      paths:
      - pathType: Prefix
        path: "/europe"
        backend:
          service:
            name: europe
            port:
              number: 80
